# ChangeLog for app-editors/emacs-cvs
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  16 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-23.0.0-r2.ebuild:
  correct definition of ${S} so it can find its source files; pointed out by
  Flameeyes on IRC

  16 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-23.0.0-r2.ebuild:
  added ECVS_LOCALNAME to avoid checking out 22.0.9999 and 23.* in the same
  distfiles directory

  16 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-22.0.95-r2.ebuild, emacs-cvs-22.0.9999-r6.ebuild,
  emacs-cvs-23.0.0-r2.ebuild:
  removed commented out code, so the ebuilds look a bit lighter

  16 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-22.0.95-r2.ebuild, emacs-cvs-22.0.9999-r6.ebuild,
  emacs-cvs-23.0.0-r2.ebuild:
  and again fixing eselect

  16 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-22.0.95-r2.ebuild, emacs-cvs-22.0.9999-r6.ebuild,
  emacs-cvs-23.0.0-r2.ebuild:
  removed font dependencies for X as at least one is pulled in by the X
  server; adjusted comment on fonts a bit to clarify

  16 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-22.0.95-r2.ebuild, emacs-cvs-22.0.9999-r6.ebuild,
  emacs-cvs-23.0.0-r2.ebuild:
  alsa should not depend on sound USE flag in RDEPEND

  16 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-22.0.95-r2.ebuild, emacs-cvs-22.0.9999-r6.ebuild,
  emacs-cvs-23.0.0-r2.ebuild:
  request AUTOCONF 2.61 instead of latest. Fixes bug 170969, reported by
  <lkml_ccc@yahoo.it>

  16 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-22.0.95-r2.ebuild, emacs-cvs-22.0.9999-r6.ebuild,
  emacs-cvs-23.0.0-r2.ebuild:
  finally fix eselect call

  16 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-23.0.0-r2.ebuild:
  added xft to IUSE

  16 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-22.0.95-r2.ebuild, emacs-cvs-22.0.9999-r6.ebuild,