@@ -11,22 +11,22 @@ MD5 33cdd958f1be433095a69bff6be18148 files/emacs-cvs-freebsd-sparc.patch 475
 RMD160 a8e6e3f2bc014979fd269a027835a65520c12417 files/emacs-cvs-freebsd-sparc.patch 475
 SHA256 43584ea923e6c7221e69d1d6a14d55d386565c5decd067a62acc58af522c803b files/emacs-cvs-freebsd-sparc.patch 475
 DIST emacs-22.0.95.tar.gz 37754533 RMD160 e5aa6001a255538dbc8fb2d548d1b67979f94033 SHA1 90cd5a6078d26b3bd0eb4f2da0561df759bc880f SHA256 5e25e8f221fe18f07feadd831bb482e6cde53c9470713c63f059ff2d3e715b1d
-EBUILD emacs-cvs-22.0.95-r2.ebuild 6424 RMD160 ec786130dad9337e785917af6c7d23787085700d SHA1 7a6b6be1b2de74761c9926e84b3bb5cae22b3d6c SHA256 3cabf011ac6f34c61ddb39e29ff125fac33e27d7010b7718ecffc19a5e7e9b6d
-MD5 51d6d0e378c174525921426ab0413174 emacs-cvs-22.0.95-r2.ebuild 6424
-RMD160 ec786130dad9337e785917af6c7d23787085700d emacs-cvs-22.0.95-r2.ebuild 6424
-SHA256 3cabf011ac6f34c61ddb39e29ff125fac33e27d7010b7718ecffc19a5e7e9b6d emacs-cvs-22.0.95-r2.ebuild 6424
-EBUILD emacs-cvs-22.0.9999-r6.ebuild 6438 RMD160 d4f738614c553fae7a3e0092d8365f52de95e77e SHA1 2bcdf02b1b90dbdf5d2b70d2dda0bf2cfc495b17 SHA256 9d0b5603ebeb5edfec5d887a4361abc5a8636eba9bac032dc0bbf280e4f6a676
-MD5 349961598d872d648c765d35d21789b2 emacs-cvs-22.0.9999-r6.ebuild 6438
-RMD160 d4f738614c553fae7a3e0092d8365f52de95e77e emacs-cvs-22.0.9999-r6.ebuild 6438
-SHA256 9d0b5603ebeb5edfec5d887a4361abc5a8636eba9bac032dc0bbf280e4f6a676 emacs-cvs-22.0.9999-r6.ebuild 6438
-EBUILD emacs-cvs-23.0.0-r2.ebuild 6696 RMD160 2dd16fe89e11d279696b165e9bab1a6d870253e2 SHA1 e385353d93ef82c9a34b1debdaf0ef3f70e434a4 SHA256 27a65fce572a0d23b990c27b11975fc1434e0d55232e97c774e1a5532099dc30
-MD5 48d253ef9ca24a3548e547695e8a0cc2 emacs-cvs-23.0.0-r2.ebuild 6696
-RMD160 2dd16fe89e11d279696b165e9bab1a6d870253e2 emacs-cvs-23.0.0-r2.ebuild 6696
-SHA256 27a65fce572a0d23b990c27b11975fc1434e0d55232e97c774e1a5532099dc30 emacs-cvs-23.0.0-r2.ebuild 6696
-MISC ChangeLog 3373 RMD160 bddf4a6fc1ba50b4a1e732ebd27a735cd33e0eb8 SHA1 e842dcab4e0fe05c9c2060b9bd7efbf9b1ea8fcc SHA256 7d297a6d40c7b8c64a2dba9cf74dce403db3ca54beffaf1794d801c2b0270c7d
-MD5 50c46f85ed5c8070d0cbc11486cc52ed ChangeLog 3373
-RMD160 bddf4a6fc1ba50b4a1e732ebd27a735cd33e0eb8 ChangeLog 3373
-SHA256 7d297a6d40c7b8c64a2dba9cf74dce403db3ca54beffaf1794d801c2b0270c7d ChangeLog 3373
+EBUILD emacs-cvs-22.0.95-r2.ebuild 6497 RMD160 4036a6e7267d6c779008742d36cbc0ef3a105144 SHA1 5aa889290c0a018da789bd0bd1ddd5570853c429 SHA256 462fdc401725744557bbfc399163e31dfbfc48d7b89568e05c678e28582d679b
+MD5 f4493123c612790caae2b844685e7611 emacs-cvs-22.0.95-r2.ebuild 6497
+RMD160 4036a6e7267d6c779008742d36cbc0ef3a105144 emacs-cvs-22.0.95-r2.ebuild 6497
+SHA256 462fdc401725744557bbfc399163e31dfbfc48d7b89568e05c678e28582d679b emacs-cvs-22.0.95-r2.ebuild 6497
+EBUILD emacs-cvs-22.0.9999-r6.ebuild 6549 RMD160 5c8399faca3b916704ee5fb242bc430bdefc8d0a SHA1 2fd27aff9e69c2e20dc85e26dd19d5db6c700b27 SHA256 35d12a10e54f15de241c616d13fe3db62e84e1c99d4883a43b31e3b0b321a672
+MD5 9e62c229739d3e7f59d5667233434932 emacs-cvs-22.0.9999-r6.ebuild 6549
+RMD160 5c8399faca3b916704ee5fb242bc430bdefc8d0a emacs-cvs-22.0.9999-r6.ebuild 6549
+SHA256 35d12a10e54f15de241c616d13fe3db62e84e1c99d4883a43b31e3b0b321a672 emacs-cvs-22.0.9999-r6.ebuild 6549
+EBUILD emacs-cvs-23.0.0-r2.ebuild 6806 RMD160 d36a0bd4aee7da8e572e0f2ddc808500b0e7be78 SHA1 7dffa67b7cb0320e1208039c37bcc27ac56e295f SHA256 2dc786a81960a106f758fb8749bd7dc4658502c37517f42d37690900acc8d3bb
+MD5 821f31b5d3a97c576e3d941d0c225cf3 emacs-cvs-23.0.0-r2.ebuild 6806
+RMD160 d36a0bd4aee7da8e572e0f2ddc808500b0e7be78 emacs-cvs-23.0.0-r2.ebuild 6806
+SHA256 2dc786a81960a106f758fb8749bd7dc4658502c37517f42d37690900acc8d3bb emacs-cvs-23.0.0-r2.ebuild 6806
+MISC ChangeLog 3712 RMD160 5e7acddce63da4681da4fbba428332fe012ef261 SHA1 62e0516802d637abe21bd11f2f93c5233ef522bd SHA256 21df8edf3eee933c9caf835a36d7a712b7e252c444d6ce4417f2acb0ab171cb0
+MD5 53474f4a1b237cd4c1a9dd893d84a03a ChangeLog 3712
+RMD160 5e7acddce63da4681da4fbba428332fe012ef261 ChangeLog 3712
+SHA256 21df8edf3eee933c9caf835a36d7a712b7e252c444d6ce4417f2acb0ab171cb0 ChangeLog 3712
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
