@@ -6,6 +6,7 @@ ECVS_AUTH="pserver"
 ECVS_SERVER="cvs.savannah.gnu.org:/sources/emacs"
 ECVS_MODULE="emacs"
 ECVS_BRANCH="HEAD"
+ECVS_LOCALNAME="emacs-22"
 
 WANT_AUTOCONF="2.61"
 WANT_AUTOMAKE="latest"
@@ -15,15 +16,16 @@ inherit autotools cvs elisp-common eutils flag-o-matic
 DESCRIPTION="The extensible, customizable, self-documenting real-time display editor"
 SRC_URI=""
 HOMEPAGE="http://www.gnu.org/software/emacs/"
-IUSE="alsa aqua gif gtk gzip-el jpeg lesstif motif png spell sound source tiff toolkit-scroll-bars X Xaw3d "
+IUSE="alsa aqua gif gtk gzip-el hesiod jpeg lesstif motif png spell sound source tiff toolkit-scroll-bars X Xaw3d xpm"
 
 RESTRICT="${RESTRICT} nostrip"
 
-X_DEPEND="x11-libs/libXmu x11-libs/libXpm x11-libs/libXt x11-misc/xbitmaps"
+X_DEPEND="x11-libs/libXmu x11-libs/libXt x11-misc/xbitmaps"
 
 RDEPEND="sys-libs/ncurses
 	app-admin/eselect-emacs
 	sys-libs/zlib
+	hesiod? ( net-dns/hesiod )
 	spell? ( || ( app-text/ispell app-text/aspell ) )
 	alsa? ( media-sound/alsa-headers )
 	X? ( $X_DEPEND )
@@ -31,6 +33,7 @@ RDEPEND="sys-libs/ncurses
 		jpeg? ( media-libs/jpeg )
 		tiff? ( media-libs/tiff )
 		png? ( media-libs/libpng )
+		xpm? ( x11-libs/libXpm )
 		gtk? ( =x11-libs/gtk+-2* )
 		!gtk? ( Xaw3d? ( x11-libs/Xaw3d ) )
 		!Xaw3d? ( motif? ( x11-libs/openmotif ) )
@@ -44,7 +47,7 @@ PROVIDE="virtual/emacs virtual/editor"
 SLOT="22.0.95"
 LICENSE="GPL-2"
 KEYWORDS="~x86"
-S="${WORKDIR}/emacs"
+S="${WORKDIR}/${ECVS_LOCALNAME}"
 
 src_unpack() {
 	cvs_src_unpack
@@ -85,7 +88,7 @@ src_compile() {
 
 	if use X; then
 		myconf="${myconf} --with-x"
-		myconf="${myconf} --with-xpm"
+		myconf="${myconf} $(use_with xpm)"
 		myconf="${myconf} $(use_with toolkit-scroll-bars)"
 		myconf="${myconf} $(use_with jpeg) $(use_with tiff)"
 		myconf="${myconf} $(use_with gif) $(use_with png)"
@@ -121,7 +124,7 @@ src_compile() {
 	else
 		econf \
 			--program-suffix=.emacs-${SLOT} \
-			--without-carbon \
+			--without-carbon $(use_with hesiod) \
 			${myconf} || die "econf emacs failed"
 	fi
 
